# parallel-programming

./: .gitignore  CMakeLists.txt  upload_to_cluster.py
CMakeModules/: SetupMpi.cmake
docs/: _config.yml  index.html
docs/_includes/: report_include.html
docs/_layouts/: default.html  report.md
docs/_reports/: matrix.md  task3.md  task6mpi.md  task7mpi.md  test.md
docs/js/: task3.js  task6mpi.js  task7mpi.js
src/: CMakeLists.txt
src/final/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  common.cpp  common.h
src/openmp/: CMakeLists.txt
src/openmp/task2/: main.cpp
src/openmp/task4/: CMakeLists.txt  main1.cpp
src/openmp/task5/: CMakeLists.txt  main.cpp
src/openmpi/: CMakeLists.txt
src/openmpi/task10_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task11_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task12_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task13_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task14_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task15_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task16_mpi/: CMakeLists.txt  master.cpp  slave.cpp
src/openmpi/task17_mpi/: CMakeLists.txt  client.cpp  server.cpp
src/openmpi/task18_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task19_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task1_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task2_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task3_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task4_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task5_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task6_mpi/: CMakeLists.txt  main.cpp
src/openmpi/task7_mpi/: CMakeLists.txt  main.cpp  main1.cpp
src/openmpi/task8_mpi/: CMakeLists.txt  main.cpp  main_reduce.cpp
src/openmpi/task9_mpi/: CMakeLists.txt  main.cpp
src/openmpi/tic-tac-toe/: CMakeLists.txt  Game.cpp  GameBoard.cpp  GameBoard.h  game.cpp  game.h  game_board.cpp  game_board.h  notes  screens.cpp  screens.h  ttt.cpp  ttt_client.cpp  ttt_server.cpp
src/task1/: main.cpp
src/task2/: main.cpp
src/task3/: CMakeLists.txt  main.cpp  main2.cpp
src/task4/: main.cpp
src/task5/: main.cpp  main1.cpp
src/task6/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  main.cpp
