find_package(MPI REQUIRED)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMakeModules)

include(SetupMpi)
add_subdirectory(task1_mpi)
add_subdirectory(task2_mpi)
add_subdirectory(task3_mpi)
add_subdirectory(task4_mpi)
add_subdirectory(task5_mpi)
add_subdirectory(task6_mpi)
add_subdirectory(task7_mpi)
add_subdirectory(task8_mpi)
add_subdirectory(task9_mpi)
add_subdirectory(task10_mpi)
add_subdirectory(task11_mpi)
add_subdirectory(task12_mpi)
add_subdirectory(task13_mpi)